# Trello2Monthly_Client_CMake

./: CMakeLists.txt
Trello2Monthly_Client_CMake/: CMakeLists.txt  Trello2Monthly_Client_CMake.cpp  Trello2Monthly_Client_CMake.h  monthly.cpp  monthly.h
